# herdr-muster

./: CONTEXT.md  Cargo.toml  README.md  config.toml.example  herdr-plugin.toml
docs/adr/: 0001-workspace-identity-via-muster-registry.md
docs/superpowers/plans/: 2026-07-03-herdr-muster.md
docs/superpowers/specs/: 2026-07-03-herdr-muster-design.md
src/: config.rs  herdr.rs  main.rs  model.rs  picker.rs  registry.rs  sources.rs
