[package]
name = "herdr-muster"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "herdr-muster"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
nucleo-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"

[dev-dependencies]
tempfile = "3"
